[gd_scene load_steps=2 format=3 uid="uid://5kjw0sv3hlk1"]

[ext_resource type="Script" uid="uid://cjdef0o0aq3cq" path="res://scripts/inventory_ui.gd" id="1_tahbm"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tahbm")

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventorySlot" type="Panel" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ItemIcon" type="TextureRect" parent="InventoryPanel/InventorySlot"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemName" type="Label" parent="InventoryPanel/InventorySlot"]
layout_mode = 0
offset_left = 40.0
offset_right = 124.0
offset_bottom = 23.0
text = "item name"

[node name="EmptyLabel" type="Label" parent="InventoryPanel/InventorySlot"]
layout_mode = 0
offset_left = 40.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = -1.0
